# fastapi-cookbook

./: .gitignore  Makefile  check_db.py  config.py  database.py  main.py  models.py  populate_db.py  pyproject.toml  schemas.py  test_main.py
source_data/: ingredients.csv  recipes.csv
