[tool.poetry]
name = "fastapi-cookbook"
version = "0.1.0"
description = ""
authors = ["Alexander Lyotov <sippie84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.42"
greenlet = "^1.1.3"
aiosqlite = "^0.17.0"
pytest = "^7.2.1"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
